--- a/src/components/mainContent/MainContent.scss
+++ b/src/components/mainContent/MainContent.scss
@@ -1,3 +1,6 @@
+@import './../../../node_modules/codemirror/lib/codemirror.css';
+@import './../../../node_modules/codemirror/theme/base16-light.css';
+
 .note-container {
   flex: 1 1 85%;
   display: flex;
@@ -58,6 +61,14 @@
         color: #fff;
       }
 
+      &__content {
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: clip;
+        margin-right: 34px;
+      }
+
       &__option {
         display: none;
         position: absolute;
@@ -89,4 +100,10 @@
     justify-content: center;
     font-size: 2.5rem;
   }
+}
+
+.CodeMirror {
+  height: auto;
+  width: 100%;
+  white-space: pre;
 }
