--- a/src/components/mainContent/MainContent.scss
+++ b/src/components/mainContent/MainContent.scss
@@ -30,7 +30,6 @@
     flex: 1 0 25%;
     background-color: #eeeeee;
     overflow-y: auto;
-    overflow-x: hidden;
 
     &__note {
       padding: 1.3rem;
@@ -41,7 +40,7 @@
       align-items: center;
       color: #222;
       cursor: pointer;
-      position: relative;
+      // position: relative;
 
       &:nth-last-child(1) {
         border-bottom: 1px solid #d4d4d4;
