--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -77,9 +77,31 @@ nav {
     align-self: center;
     margin: 0 0.5rem 0 0;
 
-    i {
-      color: #7d7c7c;
-      font-size: 3rem;
+    .sync {
+      display: flex;
+      align-items: center;
+      font-size: 1.4rem;
+      font-weight: 500;
+      color: #464646;
+      
+      i {
+        margin-right: 0.5rem;
+        font-size: 2.4rem;
+
+        &.loading {
+          animation: loader linear 1s infinite;
+        }
+      }
     }
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
