created home page design

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -102,11 +102,11 @@ nav {
       button {
         margin: 0 8px;
         text-transform: uppercase;
-        border: 1px solid rgb(88, 221, 0);
+        border: 1px solid #0098af;
         padding: 5px 22px;
         border-radius: 4px;
         cursor: pointer;
-        background-color: rgb(0, 184, 70);
+        background-color: #0098af;
         box-shadow: none;
         color: #fff;
         font-weight: 600;
@@ -115,7 +115,7 @@ nav {
 
         &:hover,
         &:active {
-          background-color: rgb(0, 138, 53);
+          background-color:  #148091;
         }
       }
     }
