--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,104 @@ body {
 main {
   display: flex;
 }
+
+section.home {
+  display: flex;
+  margin: 10rem auto;
+
+  .container {
+    max-width: 114rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .row {
+    display: flex;
+  }
+
+  .col-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 1.5rem;
+
+    &--centered {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+      font-size: 3.8rem;
+      line-height: 1.3;
+      margin-bottom: 1.5rem;
+    }
+
+    p {
+      line-height: 1.4;
+      font-size: 2.2rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+  }
+
+  .actions {
+    margin: 1.5rem 0;
+    text-align: center;
+
+    button {
+      cursor: pointer;
+      border-radius: 4px;
+      background-color: #005e6e;
+      padding: 1.3rem 4rem;
+      box-shadow: none;
+      border: 0;
+      text-transform: uppercase;
+      font-size: 1.9rem;
+      color: #fff;
+
+      &:hover {
+        background-color: #1c7f91;
+      }
+    }
+
+    p {
+      font-size: 1.2rem;
+      align-self: center;
+      line-height: 1.2;
+      margin: 1.5rem 0;
+    }
+  }
+
+  .snapshot {
+    margin: 6rem 0 3rem;
+    width: 85%;
+    text-align: center;
+    box-shadow: 0px 0px 27px 6px rgba(138, 138, 138, 1);
+  }
+}
+
+.home-footer {
+  max-width: 96rem;
+  margin: 0 auto;
+  text-align: center;
+  border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+  padding: 3rem 0;
+  letter-spacing: 1px;
+  color: rgb(53, 53, 53);
+  font-weight: 500;
+  font-size: 1.2rem;
+
+  a {
+    color: rgb(53, 53, 53);
+    text-decoration: none;
+  }
+}
