--- a/src/components/mainContent/MainContent.scss
+++ b/src/components/mainContent/MainContent.scss
@@ -207,7 +207,7 @@
   // Blockquote
   blockquote {
     margin: 0 0 1.5rem 0;
-    border-left: 4px solid #f1f1f1;
+    border-left: 4px solid #9e9e9e;
     padding: 0.5rem 1.5rem;
 
     p {
