--- a/src/App.scss
+++ b/src/App.scss
@@ -79,16 +79,18 @@ section.home {
     margin: 1.5rem 0;
     text-align: center;
 
-    button {
+    a,
+    a:link {
       cursor: pointer;
       border-radius: 4px;
       background-color: #005e6e;
-      padding: 1.3rem 4rem;
+      padding: 0.9rem 3.5rem;
       box-shadow: none;
       border: 0;
       text-transform: uppercase;
-      font-size: 1.9rem;
+      font-size: 1.7rem;
       color: #fff;
+      text-decoration: none;
 
       &:hover {
         background-color: #1c7f91;
@@ -107,7 +109,7 @@ section.home {
     margin: 6rem 0 3rem;
     width: 85%;
     text-align: center;
-    box-shadow: 0px 0px 27px 6px rgba(138, 138, 138, 1);
+    filter: drop-shadow(0 0 3rem rgb(109, 109, 109));
   }
 }
 
