toggle left menu, dropdown UI updates

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-main {
+.main {
   display: flex;
+}
+
+.aside-hidden {
+  height: calc(100vh - 6.8rem)
 }
 
 section.home {
