--- a/src/components/leftMenu/LeftMenu.scss
+++ b/src/components/leftMenu/LeftMenu.scss
@@ -20,9 +20,13 @@
 .leftbar {
   flex: 1 0 15%;
   background-color: #00424c;
-  height: calc(100vh - 7.22rem);
+  height: calc(100vh - 6.8rem);
 
   overflow: hidden;
+
+  &--hidden {
+    flex: 0;
+  }
 
   &__actions {
     margin: 2rem 0;
